--- a/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
+++ b/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
@@ -129,3 +129,10 @@ header {
 .commentForm button[type='submit']:hover {
   background: var(--green-300);
 }
+
+.commnetList {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
