--- a/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
+++ b/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
@@ -54,12 +54,17 @@ header {
   line-height: 1.6;
 }
 
+.hash {
+  display: flex;
+  gap: 0.5rem;
+}
+
 .hash a,
 .contact a {
   text-decoration: none;
   color: var(--green-500);
 
-  font-weight: 700;
+  font-weight: 400;
   line-height: 1.6;
 
   transition: color 0.1s;
