feat(ignite_feed): disable post button when textarea is empty

--- a/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
+++ b/courses/ignite/reactjs_v2022/01-IgniteFeed/src/components/Post/Post.module.css
@@ -122,8 +122,14 @@ header {
   box-shadow: none;
 }
 
-.commentForm button[type='submit']:hover {
+.commentForm button[type='submit']:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button[type='submit']:disabled {
+  background: var(--gray-600);
+  color: var(--gray-700);
+  cursor: not-allowed;
 }
 
 .commnetList {
